View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032218 | Open CASCADE | OCCT:Visualization | public | 2021-03-16 21:07 | 2021-03-23 21:46 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032218: Visualization - move V3d_View::ShadingModel() property to Graphic3d_RenderingParams | ||||
Description | Default shading model property logically belongs to Graphic3d_RenderingParams, therefore it is proposed moving it there for consistency. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Patch is ready for review - OCCT: branch CR32218. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32218-master-KGV/ |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2021-03-19 master SHA - d209b3176e21010e096833052698f1c0da5b04d5 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-03-19 SHA - 6baf3a921c29525981c0ad7881214c9b20ffe3c1 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17753.85000000016 / 17750.250000000156 [+0.02%] Products Total CPU difference: 11481.660000000102 / 11540.5800000001 [-0.51%] Windows-64-VC14: OCCT Total CPU difference: 19361.09375 / 19341.28125 [+0.10%] Products Total CPU difference: 12879.75 / 12869.921875 [+0.08%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
occt: master 114db5a5 2021-03-16 17:58:39 Committer: bugmaster Details Diff |
0032218: Visualization - move V3d_View::ShadingModel() property to Graphic3d_RenderingParams |
Affected Issues 0032218 |
|
mod - src/Graphic3d/Graphic3d_CView.cxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_CView.hxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_RenderingParams.cxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_RenderingParams.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Raytrace.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.cxx | Diff File | ||
mod - src/V3d/V3d_View.cxx | Diff File | ||
mod - src/V3d/V3d_Viewer.cxx | Diff File | ||
mod - src/V3d/V3d_Viewer.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-03-16 21:07 | kgv | New Issue | |
2021-03-16 21:07 | kgv | Assigned To | => kgv |
2021-03-16 22:49 | kgv | Note Added: 0099536 | |
2021-03-16 22:49 | kgv | Assigned To | kgv => osa |
2021-03-16 22:49 | kgv | Status | new => resolved |
2021-03-17 11:19 | osa | Note Added: 0099542 | |
2021-03-17 11:19 | osa | Assigned To | osa => bugmaster |
2021-03-17 11:19 | osa | Status | resolved => reviewed |
2021-03-17 11:26 | kgv | Relationship added | parent of 0032222 |
2021-03-20 12:49 | bugmaster | Note Added: 0099608 | |
2021-03-20 12:49 | bugmaster | Status | reviewed => tested |
2021-03-20 12:54 | bugmaster | Test case number | => Not required |
2021-03-23 21:46 | bugmaster | Changeset attached | => occt master 114db5a5 |
2021-03-23 21:46 | bugmaster | Status | tested => verified |
2021-03-23 21:46 | bugmaster | Resolution | open => fixed |