0032218: Visualization - move V3d_View::ShadingModel() property to Graphic3d_RenderingParams