src/Graphic3d/Graphic3d_RenderingParams.cxx
@@ -24,6 +24,7 @@
 void Graphic3d_RenderingParams::DumpJson (Standard_OStream& theOStream, Standard_Integer theDepth) const
 {
   OCCT_DUMP_FIELD_VALUE_NUMERICAL (theOStream, Method)
+  OCCT_DUMP_FIELD_VALUE_NUMERICAL (theOStream, ShadingModel)
   OCCT_DUMP_FIELD_VALUE_NUMERICAL (theOStream, TransparencyMethod)
   OCCT_DUMP_FIELD_VALUE_NUMERICAL (theOStream, LineFeather)
 
